--- a/bio.html
+++ b/bio.html
@@ -21,30 +21,47 @@
 
 
 	<br>
-	<p>Studying law at Sydney University Alice was heavily involved in the Improvised Comedy scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
+	<p>Studying law at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
 
-	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the Cambridge Footlights. </p>
+	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the <a href="http://en.wikipedia.org/wiki/Footlights">Cambridge Footlights</a>. </p>
 
 	<p>Arriving in New York, in the absence of an ensemble sketch crew, she began to focus on stand-up comedy, and since then, she has performed in every country she's lived in, including Sydney, Cambridge, New York and London.</p>
 
-	<p>In 2011, she returned from New York to work full time as a lawyer at Allens Linklaters, returning to the Sydney comedy scene to win the inaugural Homebake Comedy Competition, and have since given up law to pursue comedy and writing full time. Alice is regular MC and headliner around Sydney and is open for bookings to perform at corporate events , private functions and club nights. Click here to contact Alice</p>
+	<p>In 2011, she returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and have since given up law to pursue comedy and writing full time. Alice is regular MC and headliner around Sydney and is open for bookings to perform at corporate events, private functions and club nights.</p> <p>
+
+	Feel free to contact Alice at any time on <a href="mailto:alicerfraser@gmail.com">alicerfraser@gmail.com</a>.
+
+	<hr>
+
 
 	<p>"To watch Alice perform is like receiving a bunch of comedy flowers... it's choc full of colours, laughs and just a delight to see."</p>
 
 	 <p>- A Mic in Hand </p>
-
+<br><br>
 	 <p>"Charming, Brilliant and Unexpected." </p>
 
-	 <p>- New York Comedy Cellar ï»¿ "Alice is funny, and smart and a wee bit wrong, but more than that, she has composure; assured, joyful composure. It's an edge more experienced comics would love."</p>
+	 <p>- New York Comedy Cellar<p>
+<br><br>
+	 <p>"Alice is funny, and smart and a wee bit wrong, but more than that, she has composure; assured, joyful composure. It's an edge more experienced comics would love."</p>
 
-	- Rob Carlton
+	<p>- Rob Carlton</p>
+<br><br>
+	<p>"Alice Fraser is an intellectual comedy ninja"</p>
 
-	Alice Fraser is an intellectual comedy ninja 
+	<p>- Dan Ilic</p>
+<br><br>
+	<p>"very natural story teller, bringing intelligent wit to the stage ... marvellously hilarious. Very individual style... a great vibe and ... comfortable on stage." </p>
 
-	- Dan Ilic
+	<p>- Weekend Notes</p>
+<br><br>
 
-	"very natural story teller, bringing intelligent wit to the stage ... marvellously hilarious. Very individual style... a great vibe and ... comfortable on stage." weekend notes ï»¿ â€‹â€œ.... popular favourite with the crowd, and let me tell you they were a hard crowd to perform to! Armed with her banjo and a brilliant way with words... Alice Fraser shone through as a rising star.â€ Livvy Drake - Inner West Live ï»¿ â€‹â€œMy surprise favourite of the evening was Alice Fraser.... I will now be trying hard to catch her.â€ - Julian Orbach - Fringe Reviewer ï»¿ â€‹â€œan eclectic bunch of comedy treatsâ€ - Black Sheep Blog ï»¿ â€‹â€œAlice Fraser delighted usâ€ - rhum.com ï»¿ ï»¿ Credits 2012, Melbourne International Comedy Festival, â€¢ Mikey Robins and Greg Fleetâ€™s Monday Mania, â€¢ Performer MICF 2012 Political Asylum, â€¢ Headliner Laugh Garage, â€¢ MC Mic in Hand, â€¢ Writer for FBI Radioâ€™s A Rational Fear with Dan Ilic, â€¢ Host Monday â€˜Tracksuitsâ€™ on FbiRadio, â€¢ Writer/Editing Team 2012 USYD Law Revue, â€¢ Selll out Sydney Fringe Festival Show â€˜Word Crimeâ€™, â€¢ Appeared in Sam Simmonsâ€™ â€œProblemsâ€ for the ABC, â€¢ Sketch Contributor for â€˜A Gentlemanâ€™s Guide to Knife Fightingâ€™. 2011, Winner Homebake Comedy Competition. 2010, Performer - New York Comedy Clubs, including: â€¢ The Gotham, â€¢ Broadway Comedy Club, â€¢ Kirsten Schaal and Kurt Braunolerâ€™s â€˜Hot Tubâ€™, â€¢ The New York Comedy Club, â€¢ The Eastville Comedy Club, â€¢ The Karma Club, â€¢ The Brooklyn Collective, â€¢ Red Room Comedy Club, â€¢ TenEleven Comedy Mic, â€¢ Storyteller at New Yorkâ€™s The Moth Story Slam, â€¢ Winner, Slam Poetry at the Nuyorican. 2007-2008, Cambridge Footlights. 2007, Quest for the Best Grand Finalist, Raw Comedy State Finalist. 2003 â€“ 2007, Sydney University Theatresports Grand Finalist. ï»¿ University Revues USYD Arts Revue: â€¢ 2005 Performer, Contributing Writer. â€¢ 2006 Contributing Writer. â€¢ 2007 Co â€“ Producer. USYD Law Revue â€¢ 2006 â€“ Performer, Contributing Writer. â€¢ 2007 â€“ Assistant Director, Contributing Writer, Stunt Co-ordinator. â€¢ 2008 â€“ Performer, Contributing Writer. â€¢ 2009 - Performer, Contributing Writer. â€¢ 2011 - Contributing Writer. â€¢ 2012 - Contributing Writer, Editor. USYD Inaugural Womenâ€™s Revue: â€˜Objectify This!â€™ â€¢ 2007 - Head Writer. This show became â€˜Princess Cabaretâ€™ (Melbourne Comedy Festival 2008), and was taken to Edinburgh for the 2009 festival, receiving 4 stars from The Scotsman. 
+	<p>"...popular favourite with the crowd, and let me tell you they were a hard crowd to perform to! Armed with her banjo and a brilliant way with words... Alice Fraser shone through as a rising star."</p>
 
+	<p>- Livvy Drake - Inner West Live</p>
+<br><br>
+	<p>"My surprise favourite of the evening was Alice Fraser.... I will now be trying hard to catch her."</p>
+
+	<p>- Julian Orbach - Fringe Reviewer</p>
 
 
 	<br>
