--- a/bio.html
+++ b/bio.html
@@ -66,6 +66,17 @@
 
 	<br>
 	<br>
+
+	<div class="span8">
+		<div class="row" style="text-align:center">
+<a href="index.html">< Back</a>
+		</div>
+		</div>
+		<br>
+		<br>
+
+
+	
 	</div>
 	</div>
 	</div>
