--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,8 @@
 	<div class="span8 offset2">
 		<div class="row">
 		<div class="span8 offet4"  style="text-align:center">
-		<h3>Bio: Punchlines to a Deadline</h3>
+		<h3>Bio</h3>
+		<h4><i>Punchlines to a Deadline</i></h4>
 		<a href="index.html">< Back</a>
 		<br>
 	</div>
@@ -27,7 +28,13 @@
 
 	<p>Arriving in New York, in the absence of an ensemble sketch crew, she began to focus on stand-up comedy, and since then, she has performed in every country she's lived in, including Sydney, Cambridge, New York and London.</p>
 
-	<p>In 2011, she returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and have since given up law to pursue comedy and writing full time. Alice is regular MC and headliner around Sydney and is open for bookings to perform at corporate events, private functions and club nights.</p> <p>
+	<p>In 2011, she returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and has since given up law to pursue comedy and writing full time. </p>
+
+	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that glow in every environment. She can enrapture audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
+
+	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" on fbi radio. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
+
+		<p>Alice is a regular MC and headliner around Sydney and is open for bookings to perform at corporate events, private functions and club nights.</p> <p>
 
 	Feel free to contact Alice at any time on <a href="mailto:alicerfraser@gmail.com">alicerfraser@gmail.com</a>.
 
