added arts/law to bio

--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
 
 
 	<br>
-	<p>Studying at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
+	<p>Studying arts/law at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
 
 	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the <a href="http://en.wikipedia.org/wiki/Footlights">Cambridge Footlights</a>. </p>
 
