Added intro paragraph to bio page

--- a/bio.html
+++ b/bio.html
@@ -22,6 +22,8 @@
 
 
 	<br>
+	<p>Alice is a performer, writer and comedian. She's also a word geek, academic, ex-corporate Lawyer and bad musician.</p>
+	
 	<p>Studying arts/law at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
 
 	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the <a href="http://en.wikipedia.org/wiki/Footlights">Cambridge Footlights</a>. </p>
