Modified Quotes in Bio

--- a/bio.html
+++ b/bio.html
@@ -32,11 +32,11 @@
 
 	<p>In 2011, she returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and has since given up law to pursue comedy and writing full time. </p>
 
-	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that glow in every environment. She can enrapture audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
+	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that stand out in every environment. She can enrapture audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
 
 	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" on fbi radio. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
 
-		<p>Alice is a regular MC and headliner around Sydney and is open for bookings to perform at corporate events, private functions and club nights.</p> <p>
+		<p>Alice is a regular MC and headliner around Sydney and is open for bookings to perform at corporate events and private functions.</p> <p>
 
 	Feel free to contact Alice at any time on <a href="mailto:alicerfraser@gmail.com">alicerfraser@gmail.com</a>.
 
@@ -51,7 +51,7 @@
 
 	 <p>- New York Comedy Cellar<p>
 <br><br>
-	 <p>"Alice is funny, and smart and a wee bit wrong, but more than that, she has composure; assured, joyful composure. It's an edge more experienced comics would love."</p>
+	 <p>"Alice is funny, and smart and a wee bit wrong, but more than that, she has composure; assured, joyful, interested composure. It's an edge more experienced comics would love."</p>
 
 	<p>- Rob Carlton</p>
 <br><br>
@@ -64,13 +64,13 @@
 	<p>- Weekend Notes</p>
 <br><br>
 
-	<p>"...popular favourite with the crowd, and let me tell you they were a hard crowd to perform to! Armed with her banjo and a brilliant way with words... Alice Fraser shone through as a rising star."</p>
+	<p>"...Alice was the popular favourite with the crowd, and let me tell you they were a hard crowd to perform to! Armed with her banjo and a brilliant way with words, she shone through as a rising star."</p>
 
-	<p>- Livvy Drake - Inner West Live</p>
+	<p>- Inner West Live</p>
 <br><br>
 	<p>"My surprise favourite of the evening was Alice Fraser.... I will now be trying hard to catch her."</p>
 
-	<p>- Julian Orbach - Fringe Reviewer</p>
+	<p>- Julian Orbach </p>
 
 
 	<br>
