--- a/bio.html
+++ b/bio.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -41,7 +40,10 @@
 	Feel free to contact Alice at any time on <a href="mailto:alicerfraser@gmail.com">alicerfraser@gmail.com</a>.
 
 	<hr>
+	<p>"A perfect balance of sincerity and hilarity, Alice brought her distinct personality and her own brand of slightly irreverent humour to our event and made it come alive.  Fantastic addition to the night."</p>
 
+	 <p>-  Deidre Mackechnie, Executive Officer, Multiple Sclerosis Australia </p>
+<br><br>
 
 	<p>"To watch Alice perform is like receiving a bunch of comedy flowers... it's choc full of colours, laughs and just a delight to see."</p>
 
