--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
 
 	<p>Arriving in New York, in the absence of an ensemble sketch crew, she began to focus on stand-up comedy, and since then, she has performed in every country she's lived in, including Sydney, Cambridge, New York and London.</p>
 
-	<p>In 2011, she returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and has since given up law to pursue comedy and writing full time. </p>
+	<p>She returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, was nominated for best newcomer at the Sydney Comedy Festival 2013 and has given up law to pursue comedy and writing full time. </p>
 
 	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that stand out in every environment. She can enrapture audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
 
@@ -70,7 +70,7 @@
 
 	<p>- Inner West Live</p>
 <br><br>
-	<p>"My surprise favourite of the evening was Alice Fraser.... I will now be trying hard to catch her."</p>
+	<p>"My surprise favourite of the evening was Alice Fraser."</p>
 
 	<p>- Julian Orbach </p>
 
