--- a/bio.html
+++ b/bio.html
@@ -21,13 +21,13 @@
 
 
 	<br>
-	<p>Alice is a performer, writer and comedian. She's also a word geek, academic, ex-corporate Lawyer and bad musician.</p>
+	<p>Alice is a writer and comedian. She's also a thought nerd, word geek and deed doer, an ex academic, ex-corporate Lawyer and bad musician.</p>
 	
 	<p>Studying arts/law at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
 
 	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the <a href="http://en.wikipedia.org/wiki/Footlights">Cambridge Footlights</a>. </p>
 
-	<p>Arriving in New York, in the absence of an ensemble sketch crew, she began to focus on stand-up comedy, and since then, she has performed in every country she's lived in, including Sydney, Cambridge, New York and London.</p>
+	<p>Arriving in New York all alone, she began to focus on stand-up comedy and since then has performed all over the world, in Sydney, Cambridge, New York and London.</p>
 
 	<p>She returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, was nominated for best newcomer at the Sydney Comedy Festival 2013 and has given up law to pursue comedy and writing full time. </p>
 
