--- a/bio.html
+++ b/bio.html
@@ -33,9 +33,9 @@
 
 	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that stand out in every environment. She can enrapture audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
 
-	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" on fbi radio. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
+	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" on fbi radio. Her cult weekly podcast 'Tea With Alice' was featured on iTunes 'New And Notable' page. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
 
-		<p>Alice is a regular MC and headliner around Sydney and is open for bookings to perform at corporate events and private functions.</p> <p>
+		<p>Alice is a regular MC and headliner around Australia and is open for bookings to perform at corporate events and private functions.</p> <p>
 
 	Feel free to contact Alice at any time on <a href="mailto:alicerfraser@gmail.com">alicerfraser@gmail.com</a>.
 
