Updated with Yawp Praise

--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,23 @@
 		<p>Alice is a regular MC and headliner around Australia and is open for bookings to perform at corporate events and private functions.</p> <p>
 
 	Feel free to contact Alice at any time on <a href="mailto:alicerfraser@gmail.com">alicerfraser@gmail.com</a>.
+	
+	<br>
+		<h3>Praise For Alice</h3>
+	
+		<hr>
+	<p>"Razor Sharp and Intriguing... must see"</p>
 
+	 <p>- TimeOut</p>
+<br><br>
+
+	<hr>
+	<p>"Alice Fraser is wordsmith [sic]...funny, thoughtful, funny, considered and engaging.... a wonderful and charming comedian."</p>
+
+	 <p>-Yawp Magazine </p>
+<br><br>
+	
+	
 	<hr>
 	<p>"A perfect balance of sincerity and hilarity, Alice brought her distinct personality and her own brand of slightly irreverent humour to our event and made it come alive.  Fantastic addition to the night."</p>
 
