--- a/bio.html
+++ b/bio.html
@@ -21,7 +21,7 @@
 
 
 	<br>
-	<p>Alice is a writer and comedian. She's also a thought nerd, word geek and deed doer, an ex academic, ex-corporate Lawyer and bad musician.</p>
+	<p>Alice is a writer, performer and comedian. She's also a thought nerd, word geek and deed doer, an ex academic, ex-corporate Lawyer and bad musician.</p>
 	
 	<p>Studying arts/law at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
 
@@ -31,9 +31,9 @@
 
 	<p>She returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, was nominated for best newcomer at the Sydney Comedy Festival 2013 and has given up law to pursue comedy and writing full time. </p>
 
-	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that stand out in every environment. She can enrapture audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
+	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that stand out in every environment. She enraptures audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
 
-	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" on fbi radio. Her cult weekly podcast 'Tea With Alice' was featured on iTunes 'New And Notable' page. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
+	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" weekly on FBi radio. She has debated Julian Assange at Splendour in the Grass and made her feature length movie debut in Jim Minns' 'Never Hesitate'. Her cult weekly podcast 'Tea With Alice' was featured on iTunes 'New And Notable' page. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
 
 		<p>Alice is a regular MC and headliner around Australia and is open for bookings to perform at corporate events and private functions.</p> <p>
 
