--- a/bio.html
+++ b/bio.html
@@ -21,19 +21,19 @@
 
 
 	<br>
-	<p>Alice is a writer, performer and comedian. She's also a thought nerd, word geek and deed doer, an ex academic, ex-corporate Lawyer and bad musician.</p>
+	<p>Alice is a writer, performer and comedian. She's also an ex academic, ex-corporate Lawyer and terrible banjo player.</p>
 	
 	<p>Studying arts/law at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
 
 	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the <a href="http://en.wikipedia.org/wiki/Footlights">Cambridge Footlights</a>. </p>
 
-	<p>Arriving in New York all alone, she began to focus on stand-up comedy and since then has performed all over the world, in Sydney, Cambridge, New York and London.</p>
+	<p>Arriving in New York, she began to focus on stand-up comedy. Since then, she has performed all over the world, from Cambridge to New York, and from London to Damascus.</p>
 
-	<p>She returned from New York to work full time as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, returning to the Sydney comedy scene to win the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, was nominated for best newcomer at the Sydney Comedy Festival 2013 and has given up law to pursue comedy and writing full time. </p>
+	<p>Alice worked as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, winning the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and being nominated for best newcomer at the Sydney Comedy Festival 2013. She has given up law to pursue comedy and writing full time. Alice has given a TEDx talk, debated against Julian Assange and done a gig in a Butcher's shop that was definitely heaps more stressful than either of those things. She regularly performs for corporate events and charity fundraisers, as well as in Clubs and theatres.  </p>
 
-	<p>Alice Fraser's journey up through the mean streets of the Cambridge Footlights and New York's cut-throat comedy scene has left her with writing and performing skills that stand out in every environment. She enraptures audiences from the rough pubs of london and country NSW, to the crystal clinking boardrooms of the corporate world. </p>
+	<p>Alice's breadth of experience from the Cambridge Footlights to New York's cut-throat comedy scene has left her with writing and performing skills that charms rough crowds and breaks effete hipster apathy into genuine laughter. </p>
 
-	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" weekly on FBi radio. She has debated Julian Assange at Splendour in the Grass and made her feature length movie debut in Jim Minns' 'Never Hesitate'. Her cult weekly podcast 'Tea With Alice' was featured on iTunes 'New And Notable' page. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
+	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" weekly on FBi radio, as well as writing a regular column for SBS Comedy. She has made appearances on Channel 9 Mornings, and made her feature length movie debut in Jim Minns' 'Never Hesitate'. Her cult weekly podcast 'Tea With Alice' was featured on the iTunes 'New And Notable' page, and has a growing enthusiastic fanbase. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
 
 		<p>Alice is a regular MC and headliner around Australia and is open for bookings to perform at corporate events and private functions.</p> <p>
 
@@ -42,12 +42,31 @@
 	<br>
 		<h3>Praise For Alice</h3>
 	
+	<hr>
+	
+	<p>"brilliant young stand-up"</p>
+
+	 <p>-  The Sydney Morning Herald</p>
+<br><br>
+
 		<hr>
+	<p>"This Brilliant mind turns the world upside-down"</p>
+
+	 <p>- The Herald Sun </p>
+<br><br>
+
+		<hr>
+		
 	<p>"Razor Sharp and Intriguing... must see"</p>
 
 	 <p>- TimeOut</p>
-<br><br>
+<br>
 
+		<hr>
+	<p>"Raw, supersmart hilarity"</p>
+
+	 <p>- Cosmopolitan</p>
+<br>
 	<hr>
 	<p>"Alice Fraser is wordsmith [sic]...funny, thoughtful, funny, considered and engaging.... a wonderful and charming comedian."</p>
 
