--- a/bio.html
+++ b/bio.html
@@ -21,19 +21,27 @@
 
 
 	<br>
-	<p>Alice is a writer, performer and comedian. She's also an ex academic, ex-corporate Lawyer and terrible banjo player.</p>
+	<p>Alice is a writer, performer and comedian. 
+	
+	She's also an ex academic, ex-corporate Lawyer and terrible banjo player.</p>
 	
 	<p>Studying arts/law at Sydney University Alice was heavily involved in the <a href="http://www.cranstoncup.com.au/">Improvised Comedy</a> scene and the Faculty Revues over 5 years of writing, directing, producing and performing.</p>
 
 	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the <a href="http://en.wikipedia.org/wiki/Footlights">Cambridge Footlights</a>. </p>
 
-	<p>Arriving in New York, she began to focus on stand-up comedy. Since then, she has performed all over the world, from Cambridge to New York, and from London to Damascus.</p>
+	<p>Arriving in New York, she began to focus on stand-up comedy, and despite a brief career as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, has been doing standup ever since. She is now a full time comedian and writer, having perfomed sold out solo shows at the Melbourne International Comedy Festival, Sydney Comedy Festival, Canberra Comedy Festival, Perth, Adelaide and Edinburgh Fringe Festivals. 
+	
+	She has performed all over the world, from Cambridge to New York, and from London to Damascus.</p>
 
-	<p>Alice worked as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, winning the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and being nominated for best newcomer at the Sydney Comedy Festival 2013. She has given up law to pursue comedy and writing full time. Alice has given a TEDx talk, debated against Julian Assange and done a gig in a Butcher's shop that was definitely heaps more stressful than either of those things. She regularly performs for corporate events and charity fundraisers, as well as in Clubs and theatres.  </p>
+	<p>Alice won the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and was nominated for best newcomer at the Sydney Comedy Festival 2013.
+	
+	Alice has given a <a href="https://www.youtube.com/watch?v=M4MlaRGcFHI/">TEDx Talk</a>, debated against Julian Assange and done a gig in a Butcher's shop next to a rotating meat wall that was heaps more stressful than either of those things. 
+	
+	She regularly performs for corporate events and charity fundraisers, as well as in Clubs and theatres.  </p>
 
-	<p>Alice's breadth of experience from the Cambridge Footlights to New York's cut-throat comedy scene has left her with writing and performing skills that charms rough crowds and breaks effete hipster apathy into genuine laughter. </p>
+	<p>Alice's breadth of experience from the Cambridge Footlights to New York's cut-throat comedy scene has left her with writing and performing skills to meet any need. She charms rough crowds and breaks effete hipster apathy into genuine non-ironic laughter. </p>
 
-	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" weekly on FBi radio, as well as writing a regular column for SBS Comedy. She has made appearances on Channel 9 Mornings, and made her feature length movie debut in Jim Minns' 'Never Hesitate'. Her cult weekly podcast 'Tea With Alice' was featured on the iTunes 'New And Notable' page, and has a growing enthusiastic fanbase. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
+	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" weekly on FBi radio, as well as writing a regular column for SBS Comedy. She has made appearances on Channel 9 Mornings, and made her feature length movie debut in Jim Minns' 'Never Hesitate'. Her cult weekly podcast <a href="https://itunes.apple.com/au/podcast/tea-with-alice/id789603540?mt=2">Tea With Alice</a>, was featured on the iTunes 'New And Notable' page, and has a growing enthusiastic fanbase. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
 
 		<p>Alice is a regular MC and headliner around Australia and is open for bookings to perform at corporate events and private functions.</p> <p>
 
@@ -53,6 +61,13 @@
 	<p>"This Brilliant mind turns the world upside-down"</p>
 
 	 <p>- The Herald Sun </p>
+<br><br>
+
+		<hr>
+			<hr>
+	<p>" bravery and vulnerability... painfully funny insights. Riveting."</p>
+
+	 <p>- The Clothesline </p>
 <br><br>
 
 		<hr>
