--- a/bio.html
+++ b/bio.html
@@ -21,7 +21,7 @@
 
 
 	<br>
-	<p>Alice is a writer, performer and comedian. 
+	<p>Alice is an award winning writer, performer and comedian. 
 	
 	She's also an ex academic, ex-corporate Lawyer and terrible banjo player.</p>
 	
@@ -29,19 +29,19 @@
 
 	<p>During her Masters in English Literature (Rhetoric) at Cambridge, she carried her love of sketch comedy writing and performing into the <a href="http://en.wikipedia.org/wiki/Footlights">Cambridge Footlights</a>. </p>
 
-	<p>Arriving in New York, she began to focus on stand-up comedy, and despite a brief career as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, has been doing standup ever since. She is now a full time comedian and writer, having perfomed sold out solo shows at the Melbourne International Comedy Festival, Sydney Comedy Festival, Canberra Comedy Festival, Perth, Adelaide and Edinburgh Fringe Festivals. 
+	<p>She then went to New York, she began to focus on stand-up comedy, and despite a brief career as a lawyer at <a href="http://allens.com.au">Allens Linklaters</a>, has been doing standup ever since. She is now a full time comedian and writer, having perfomed sold out solo shows at the Melbourne International Comedy Festival, Sydney Comedy Festival, Canberra Comedy Festival, Perth, Adelaide and Edinburgh Fringe Festivals. 
 	
 	She has performed all over the world, from Cambridge to New York, and from London to Damascus.</p>
 
-	<p>Alice won the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and was nominated for best newcomer at the Sydney Comedy Festival 2013.
+	<p>Alice won the inaugural <a href="http://homebake.com.au/2012/portfolio/comedy/">Homebake Comedy Competition</a>, and was nominated for best newcomer at the Sydney Comedy Festival 2013, as well as being a SCF FRESH act, and getting <a href="http://www.comedyfestival.com.au/2015/season/funny-tonne/daniel-paproth/review/savage-alice-fraser/">Rave Reviews</a>, for her solo shows.
 	
 	Alice has given a <a href="https://www.youtube.com/watch?v=M4MlaRGcFHI/">TEDx Talk</a>, debated against Julian Assange and done a gig in a Butcher's shop next to a rotating meat wall that was heaps more stressful than either of those things. 
 	
-	She regularly performs for corporate events and charity fundraisers, as well as in Clubs and theatres.  </p>
+	She regularly performs for corporate events and charity fundraisers, as well as in Clubs and theatres, doing standup, MC work and <a href="https://soundcloud.com/alice-rebekah-fraser/alice-fraser-time-travel-debate">comedy debates</a>.</p>
 
-	<p>Alice's breadth of experience from the Cambridge Footlights to New York's cut-throat comedy scene has left her with writing and performing skills to meet any need. She charms rough crowds and breaks effete hipster apathy into genuine non-ironic laughter. </p>
+	<p>Alice's breadth of experience from the Cambridge Footlights to New York's cut-throat comedy scene has left her with writing and performing skills to meet any need. She charms rough crowds and breaks effete hipster apathy up into genuine non-ironic laughter with the hammer of hilarity. </p>
 
-	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" weekly on FBi radio, as well as writing a regular column for SBS Comedy. She has made appearances on Channel 9 Mornings, and made her feature length movie debut in Jim Minns' 'Never Hesitate'. Her cult weekly podcast <a href="https://itunes.apple.com/au/podcast/tea-with-alice/id789603540?mt=2">Tea With Alice</a>, was featured on the iTunes 'New And Notable' page, and has a growing enthusiastic fanbase. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
+	<p>Alice is a writer for the satirical news radio show "A Rational Fear", and hosts "Tracksuits" weekly on FBi radio, as well as writing a regular column for  MC work and <a href="http://www.sbs.com.au/comedy/person/alice-rebekah-fraser-0">SBS Comedy</a>. She has made appearances on Channel 9 Mornings, and made her feature length movie debut in Jim Minns' 'Never Hesitate'. Her cult weekly podcast <a href="https://itunes.apple.com/au/podcast/tea-with-alice/id789603540?mt=2">Tea With Alice</a>, was featured on the iTunes 'New And Notable' page, and has a growing enthusiastic fanbase. She is a member of the all-star girl comedy troupe "Aggressively Helpful", and writes regularly for television, radio and on anything else anyone will let her. </p>
 
 		<p>Alice is a regular MC and headliner around Australia and is open for bookings to perform at corporate events and private functions.</p> <p>
 
